--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
                 Gokul
             </small>
             <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas placeat temporibus aliquid, deleniti ipsam provident voluptatem sit molestias dolor repellendus a officia pariatur eius eveniet facilis maiores, ad rem quas.
+             deleniti ipsam provident voluptatem sit molestias dolor repellendus a officia pariatur eius eveniet facilis maiores, ad rem quas.
             </p>
             <h3>Dog</h3>    
         </div>
     </div>
-    <iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY">
-</iframe>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
     <nav>
         <ul>
             <li>
