--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Gokul
             </small>
             <p>
-             deleniti ipsam provident voluptatem sit molestias dolor repellendus a officia pariatur eius eveniet facilis maiores, ad rem quas.
+             t voluptatem sit molestias dolor repellendus a officia pariatur eius eveniet facilis maiores, ad rem quas.
             </p>
             <h3>Dog</h3>    
         </div>
