--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <div class="circle-container">
             <div class="circle">
+                <img src="logo.png">
             </div>
         </div>
         <div class="content">
