--- a/index.html
+++ b/index.html
@@ -16,12 +16,31 @@
                 <img src="logo.png">
 
         <div class="content">
-            <h1>My article</h1>
+            <h1>An Intelligent PDF Reader</h1>
             <small>
                 Gokul
             </small>
             <p>
-             t voluptatem sit molestias dolor repellendus a officia pariatur eius eveniet facilis maiores, ad rem quas.
+             Tablets and mobiles are convenient, eco-friendly document readers that can carry
+millions of books. Oftentimes, the reader may have to recite prayers, or read out a
+bedtime story or be engaged in other activities like cooking when one’s hands are
+dirty and one would like to avoid touching the phone or tablet. In such use cases,
+it is useful to have a voice controlled PDF app, and even better is an intelligent
+PDF app. Under the voice control feature, the PDF reader responds to commands
+like “go to page 10” via the microphone and does the respective action on the PDF
+viewer. On the other hand, the intelligence feature is intended for readers who
+would recite the contents of the PDF aloud. For such users, it is very inconvenient
+to simultaneously focus on fixing the right zoom, and location using their hands
+instead of focusing on their recitation performance. An intelligent PDF reader is
+envisioned to automatically scroll to the right place and provide the right level of
+zoom that is comfortable to the eye. In this project we propose to address these
+needs. These features need (1) Voice to text conversion, (2) PDF to text conversion,
+and (3) a metric assess how close (1) and (2) match to access the location of
+the PDF and zoom accordingly. However, Voice control needs only (1). As a part
+of this course we successfully completed the first phase on audio recognition, and
+partly implemented text recognition corresponding to second phase. We built an
+app deployed it on our mobiles and tablets, and is quite accurate; 90% of times it
+recognizes and does the correct action based on the command.
             </p>
             <h3>Dog</h3>    
         </div>
