--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@ recognizes and does the correct action based on the command.
     <nav>
         <ul>
             <li>
-                <i class="fas fa-home">Home</i>
-                <i class="fas fa-user-alt">about</i>
-                <i class="fas fa-envelope">Contact</i>
+                By - Gokul Hariharan & Devesh Lohia
             </li>
         </ul>
     </nav>
