--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ recognizes and does the correct action based on the command.
     <nav>
         <ul>
             <li>
-                By - Gokul Hariharan & Devesh Lohia
+                By - Gokul Hariharan & Devesh Lohia @ An-Intelligent-PDF-Reader@googlegroups.com
             </li>
         </ul>
     </nav>
