--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@ recognizes and does the correct action based on the command.
     
     <nav>
         <ul>
+            <li style="color:white">
+                By - Gokul Hariharan & Devesh Lohia
+            </li style="color:white">
             <li>
-                By - Gokul Hariharan & Devesh Lohia @ An-Intelligent-PDF-Reader@googlegroups.com
+                An-Intelligent-PDF-Reader@googlegroups.com
             </li>
         </ul>
     </nav>
