--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ recognizes and does the correct action based on the command.
         <ul>
             <li style="color:white">
                 By - Gokul Hariharan & Devesh Lohia
-            </li style="color:white">
-            <li>
+            </li>
+            <li style="color:white">
                 An-Intelligent-PDF-Reader@googlegroups.com
             </li>
         </ul>
