--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ recognizes and does the correct action based on the command.
                 By - Gokul Hariharan & Devesh Lohia
             </li>
             <li style="color:white">
-                An-Intelligent-PDF-Reader@googlegroups.com
+                <a href = "mailto: an-intelligent-pdf-reader@googlegroups.com">Contact us</a>
             </li>
         </ul>
     </nav>
