--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ recognizes and does the correct action based on the command.
             <li style="color:white">
                 By - Gokul Hariharan & Devesh Lohia
             </li>
-            <li style="color:white">
-                <a href = "mailto: an-intelligent-pdf-reader@googlegroups.com">Contact us</a>
+            <li>
+                <a href = "mailto: an-intelligent-pdf-reader@googlegroups.com"><p style="color:white">Contact us</p></a>
             </li>
         </ul>
     </nav>
