--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
 
-                <img src="logo.png">
+                <img src="logo.png" alt="Avatar">
 
         <div class="content">
             <h1>An Intelligent PDF Reader</h1>
