--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ app deployed it on our mobiles and tablets, and is quite accurate; 90% of times 
 recognizes and does the correct action based on the command.
             </p>
         </div>
-        <iframe width="420" height="315" src="https://youtu.be/rJQci39PXJ4"> </iframe>
+        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=rJQci39PXJ4"> </iframe>
     </div>
     
     <nav>
